[TextureMapper] Preserve 3d may split layers unnecessarily when they don't intersect https://bugs.webkit.org/show_bug.cgi?id=284250

Reviewed by NOBODY (OOPS!).

Explanation of why this fixes the bug (OOPS!).

* Source/WebCore/platform/graphics/texmap/TextureMapperLayer3DRenderingContext.cpp:
(WebCore::TextureMapperLayer3DRenderingContext::paint):
(WebCore::TextureMapperLayer3DRenderingContext::computeBoundingBoxForLayer):
(WebCore::TextureMapperLayer3DRenderingContext::depthSortBoundingVolumes):
* Source/WebCore/platform/graphics/texmap/TextureMapperLayer3DRenderingContext.h: